refactor(blog): updates blog post url format to /blog/post/yyyy/mm/dd/title

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Aswin M Guptha
 description: Portfolio & Blog
 baseurl: ""
+permalink: /blog/post/:year/:month/:day/:title/
 url: "https://bitsbyamg.com"
 
 markdown: kramdown
